# ethermint

./: .golangci.yml  CHANGELOG.md  Makefile  go.mod  go.sum  gomod2nix.toml
.github/workflows/: build.yml  dependencies.yml  goreleaser.yml  lint.yml  security.yml  test.yml
app/: app.go  simulation_test.go  utils.go
app/ante/: ante_test.go  eip712.go  eth.go  eth_test.go  handler_options.go  interfaces.go  sigs_test.go  utils_test.go
client/: export.go  keys.go
client/debug/: debug.go
client/keys/: add.go
cmd/ethermintd/: main.go  root.go
contract/: README.md  genEthermintJSON.sh  package-lock.json  package.json
contract/contracts/: EIP161Test.sol  EIP2929Test.sol  StateTest.sol
crypto/hd/: algorithm.go  algorithm_test.go
docs/api/: proto-docs.md
ethereum/eip712/: eip712.go  msg_test.go
indexer/: kv_indexer.go
nix/: default.nix  sources.json  testenv.nix
nix/poetry2nix/: default.nix
rpc/: websockets.go
rpc/backend/: account_info.go  node_info.go  tracing.go  tracing_test.go  tx_info.go
rpc/ethereum/backend/: backend.go  utils.go
rpc/ethereum/types/: block.go
server/: indexer_cmd.go  start.go  util.go
server/config/: config.go
server/flags/: flags.go
tests/: signer.go
tests/importer/: importer_test.go
tests/integration_tests/: pyproject.toml  shell.nix  test_grpc_only.py  test_upgrade.py  utils.py
tests/integration_tests/configs/: upgrade-test-package.nix
types/: account.go  chain_id.go  chain_id_test.go
x/evm/: genesis.go  genesis_test.go  handler_test.go  module.go
x/evm/ctxstatedb/: ctx.go  (+7 more)
x/feemarket/: module.go
(+111 files in other folders)
